# swift-indexstore

./: .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md
.github/workflows/: test.yml
Sources/IndexDumpTool/: IndexDumpTool.swift  main.swift
Sources/SwiftIndexStore/: IndexStoreError.swift  IndexStoreOccurrence.swift  IndexStoreRecord.swift  IndexStoreRelation.swift  IndexStoreSymbol.swift  IndexStoreUnit.swift  Lazy.swift  LibIndexStore.swift  OptionSetDisplayable.swift  Process+Extension.swift  SwiftIndexStore.swift  UnfairLock.swift  Utils.swift
Sources/_CIndexStore/include/: indexstore_functions.h  module.modulemap
Tests/: LinuxMain.swift
Tests/SwiftIndexStoreTests/: IndexSpace.swift  SwiftIndexStoreTests.swift  Toolchain.swift  XCTestManifests.swift
Tests/TestSystemModule/include/: module.modulemap  test_system_module.h
